Merged stuff, use Java 6 Base64 encoding (DatatypeConverter)